--- a/packages/app/site/package.json
+++ b/packages/app/site/package.json
@@ -16,6 +16,7 @@
   },
   "license": "0BSD",
   "dependencies": {
+    "@blog/posts-snowman": "*",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@mdx-js/mdx": "^1.6.22",
@@ -24,8 +25,12 @@
     "gatsby-plugin-emotion": "^5.1.0",
     "gatsby-plugin-mdx": "^1.7.1",
     "gatsby-source-filesystem": "^2.8.1",
+    "prism-react-renderer": "^1.1.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "@blog/posts-snowman": "*"
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@types/mdx-js__react": "^1.5.3",
+    "gatsby-plugin-root-import": "^2.0.5"
   }
 }
