--- a/packages/lib/posts-snowman/package.json
+++ b/packages/lib/posts-snowman/package.json
@@ -12,5 +12,10 @@
     "glob": "^7.1.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "dagre": "^0.8.5",
+    "dagre-reactjs": "^0.1.4",
+    "fp-ts-contrib": "^0.1.21"
   }
 }
